# dev-ready

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README-pypi.md  README.md  THIRD_PARTY_NOTICES.md  manifest.json  pyproject.toml
.bob/: qa.md  security.md  sre.md
.github/workflows/: ci.yml  release.yml  upstream-bump.yml  vendored-bump.yml
docs/: architecture.md  catalog-candidates.md  cli-spec.md  pin-maintenance.md  releasing.md  requirements.md  v0.1-overview.md  v0.2-overview.md  v0.2-plan.md  v0.3-overview.md  v0.4-overview.md  v0.5-overview.md  v0.6-overview.md  version-plan.md
docs/decisions/: adr-001-two-stage-generation-no-fork.md  adr-002-manifest-pinned-upstream.md  adr-003-distribution-via-uvx.md  adr-004-interactive-prompts-escape-hatch.md  adr-005-consume-upstream-via-copier.md  adr-006-manifest-prune-list.md  adr-007-multi-agent-handoff-protocol.md  adr-008-integration-modes-vendor-vs-pinned.md  adr-009-manifest-vendored-provenance.md  adr-010-item-level-catalog-selection.md  adr-011-agent-config-restructure.md
scripts/: bump_upstream.py  bump_vendored.py  check_notices_sync.py  sync_vendored.py
src/: README.md
src/dev_ready/: __init__.py  __main__.py  check.py  cli.py  errors.py  generate.py  manifest.json  stamp.py  upgrade.py  verify.py
templates/: README.md
tests/: README.md
tests/e2e/: test_init_real.py
tests/integration/: test_fetch_real.py
tests/unit/: test_bump_upstream.py  test_check.py  test_cli.py  test_fetch.py  test_generate.py  test_manifest.py  test_notices_sync.py  test_overlay.py  test_placeholder.py  test_prompts.py  test_report.py  (+3 more)
(+41 files in other folders)
